# flask-rest-api

./: main.py  pyproject.toml  tests.py
tests/: test_rest_api.py
