[tool.poetry]
name = "rest_api"
version = "0.1.0"
description = ""
authors = ["Yvan Pearson <yvan.pearson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aniso8601 = "8.0.0"
click = "7.1.2"
Flask = "1.1.2"
Flask-RESTful = "0.3.8"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
pytz = "2020.1"
six = "1.15.0"
SQLAlchemy = "1.3.18"
Werkzeug = "1.0.1"
ptpython = "^3.0.19"
requests = "^2.26.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
